# cis194

./: README.md  cis194.cabal  hie.yaml
src/Week01/: CardValidator.hs  TowerOfHanoi.hs
src/Week02/: LogAnalysis.hs
src/Week03/: Golf.hs
src/Week04/: Wholemeal.hs
src/Week05/: Calc.hs  ExprT.hs  Parser.hs  StackVM.hs
src/Week06/: Fibonacci.hs
src/Week07/: Buffer.hs  Editor.hs  JoinList.hs  Scrabble.hs  ScrabbleBufEditor.hs  ScrabbleBuffer.hs  Sized.hs
src/Week08/: Employee.hs  Party.hs
src/Week10/: AParser.hs
src/Week11/: Lecture.hs  SExpr.hs
src/Week12/: Risk.hs
tests/Week01/: CardValidatorSpec.hs  TowerOfHanoiSpec.hs
tests/Week02/: LogAnalysisSpec.hs
tests/Week03/: GolfSpec.hs
tests/Week04/: WholemealSpec.hs
tests/Week05/: CalcSpec.hs
tests/Week06/: FibonacciSpec.hs
tests/Week07/: JoinListSpec.hs  ScrabbleSpec.hs
tests/Week08/: PartySpec.hs
tests/Week10/: AParserSpec.hs
tests/Week11/: LectureSpec.hs  SExprSpec.hs
tests/Week12/: RiskSpec.hs
