name:                cis194
version:             0.1.0.0
homepage:            https://github.com/azuline/cis194
license:             Apache-2.0
license-file:        LICENSE
author:              blissful
maintainer:          blissful@sunsetglow.net
copyright:           2020 blissful
category:            Fun
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  ghc-options:       -Wall
  exposed-modules:   Week01.CardValidator
                   , Week01.TowerOfHanoi
                   , Week02.LogAnalysis
                   , Week03.Golf
                   , Week04.Wholemeal
                   , Week05.Calc
                   , Week05.ExprT
                   , Week05.Parser
                   , Week05.StackVM
                   , Week06.Fibonacci
                   , Week07.JoinList
                   , Week07.Scrabble
                   , Week07.Sized
                   , Week07.Buffer
                   , Week07.ScrabbleBuffer
                   , Week07.Editor
                   , Week07.ScrabbleBufEditor
                   , Week08.Party
                   , Week08.Employee
                   , Week10.AParser
  hs-source-dirs:    src
  default-language:  Haskell2010
  build-depends:     base >= 4.7 && < 5
                   , containers
                   , mtl

test-suite tests
  ghc-options:       -Wall
  type:              exitcode-stdio-1.0
  main-is:           Spec.hs
  hs-source-dirs:    tests
  default-language:  Haskell2010
  build-depends:     base >= 4.7 && < 5
                   , cis194
                   , hspec
                   , containers
  other-modules:     Week01.CardValidatorSpec
                   , Week01.TowerOfHanoiSpec
                   , Week02.LogAnalysisSpec
                   , Week03.GolfSpec
                   , Week04.WholemealSpec
                   , Week05.CalcSpec
                   , Week06.FibonacciSpec
                   , Week07.JoinListSpec
                   , Week07.ScrabbleSpec
                   , Week08.PartySpec
                   , Week10.AParserSpec
